Commit recent changes.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,1 +1,32 @@
 Test at http://localhost:81/alttp/public/
+
+Add object editing to editor:
+    - Add enemies to areas
+    - Add section settings for area
+    - Think about when to refresh state of
+        - defeated/updated enemies
+        - updated tiles (probably every time we transition to another view area)
+        - things like alttp colored switch state(on enter dungeon), flooded rooms state(might depend on specific state of dungeon), bombed blind's hideout (never resets), revealed chest or key (not sure), opened sealed door (depends on the mechanism),
+
+Add example prologue area:
+    - Floor switches to open exit from area that gives roll technique
+    - Weapon after dodge roll.
+    - Bushes/grass you can cut to farm up health
+    - Bushes also block progress without weapon.
+    - NPC that gives weapon?
+    - Dark areas + cat eyes powerup
+    - Peach of Immortality at the end
+
+Make thrown objects deal damage to enemies
+
+Add objects that can be pushed or pulled.
+
+Add connected areas + dungeons
+
+Add animation when picking up a major item.
+
+Add animation for breaking stone hitting the ground.
+
+
+Possible tool: Leather gloves protect you from thorn bushes.
+Possible tool: Leather boots let you walk on thorny ground without taking damage.
