--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,11 +1,38 @@
 Test at http://localhost:81/alttp/public/
 
-Add active tools
-    Bow
+Bugs:
+    Sometimes get stuck when moving diagonally across the transition from an object flush with a tile wall. Possibly a wiggling issue?
+
+    Fix leaving an area section and immediately returning doesn't reset objects
+        - Fix tiles should also be reset when leaving an area section?
+
+
+
 
 Add ability to assign active tools to the X/Y buttons.
     -Display a colored box around the items that correspond to the color of the button on the controller as well as a letter.
     -Track most recent input to control keyboard vs controller type
+
+
+Add ability to charge weapon
+    Spin chakram around quickly in a circle twice (can move after throwing)
+    Costs 10 mana
+
+    Charge level 2 requires level 2 charge ability + level 2 weapon
+    Costs 50 mana
+    Similar to level 1 but 2 chakrams spin around you at different radiuses for 4 seconds.
+
+Allow selecting an element using the L/R triggers
+    No element is an option and the default
+    Apply element to charge abilities.
+    Costs an additional 10 mana for the element
+    Add elemental crystal objects that are faded red/blue/yellow and become vibrant when hit by element
+    When all crystals in a room are activated, hiddenSwitch elements appear.
+
+Add ability to charge carried objects
+    Hold the passive button when picking up an object to charge
+    Charge level is limited to
+
 
 Add meditate ability
     - stand still and hold the passive tool button to grow a ring of spirit sight around you
@@ -26,10 +53,11 @@ Add connected areas + dungeons
 
 Add animation for breaking stone hitting the ground.
 
+Track the object an arrow is stuck in and move it with that target until it disappears
+    - Use a different 'stuck' frame for the arrow missing the head.
+
 Animate hearts refilling
 
-Fix leaving an area section and immediately returning doesn't reset objects
-    - Fix tiles should also be reset when leaving an area section?
 
 Allow player to choose difficulty during the opening by completing tasks:
     - Solve more difficult puzzle to set puzzles to difficult
@@ -44,6 +72,7 @@ Include some random dungeon design in the base game:
 
 Keep in mind significance of design elements for future racing/randomizer.
 
+Add quick tool select ring on the right analog stick.
 
 Possible tool: Leather gloves protect you from thorn bushes.
 Possible tool: Leather boots let you walk on thorny ground without taking damage.
