--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,19 +1,54 @@
 Test at http://localhost:81/alttp/public/
 
 Bugs:
-    Fix tiles should also be reset when leaving an area section.
     Pushing on a solid object sitting on thorny ground shouldn't hurt you:
         -return tileBehaviors and objectBehaviors separately, only damage if tile is solid+damaging.
     Fix menu selection breaks sometimes
         No luck reproducing, maybe the analog stick was doing something weird?
+    Doors don't appear open when moving into them from a different section
+        I think this is because the door doesn't update until it is in the current areaInstance
 
 Graphics:
     Add sparkles to peach loot + hud.
-    Add circular depression object+graphics (to roll ball into)
 
-Add Zone doors
 
-Add staircases
+Add title screen:
+    - Present 3 rows for 3 save states:
+        New Game (Warn that this will erase saved data, just use a confirm prompt for now)
+            Quick Demo
+                - Small area.
+                - Start with 6 hearts + weapon
+                - Has a hub with a chest outside an entrance containing a tool. Entrance takes you to a series of puzzles that ultimately rewards you with 4 peach pieces and drops you off in the basement with the charge tool and upgrades locked behind each tool.
+            Full Game
+    - "Delete Save" option at the bottom
+        - Select file
+            - "Delete your progress?" + display file details (LEFT/RIGHT)"Yes"/"No", select "No" by default.
+    - Change defeat screen to be 'Continue' + 'Quit', quit takes you back to title.
+
+Prologue Dungeon: Peach Cave
+    - Peach cave entrance is near the river in between the waterfall and the crater lake.
+    - Entrance is dark, MC falls into pit 2 stories deep and lands in a pool and has to swim to shallow ground.
+    - Area is dark but lit up by glowing mushrooms in some places.
+    - Peach of Immortality is found early and gives initial mana bar. Needs to be found before the cat eyes+weapon.
+    - Add warning text on entering dark areas without cat eyes.
+        "It's too dark to see anything in here, I should turn back."
+        After:
+        "Now I can see where I'm going in here."
+    - Add text boxes
+        - Space/shift/enter to advance/dismiss
+        - On start
+        - "You're no ordinary monkey, what brings you here?"
+            "I heard there was a golden peach hidden in this cave that could make you immortal."
+        - On pickup item
+    - NPC that gives weapon?
+    - Exit via a pit that falls into a pool that lets out into the lake. Just use a cave entrance/exit for now,eventually I think it would be better if you swim out. Hoping the forced swimming makes it obvious you don't need an item to swim.
+    - Removed dodge roll, it is a little tricky to work with and don't want it to be one of the first things a player has to learn to use.
+
+Dungeon 1: Vanara Temple
+    - Find dodge roll technique, required to complete.
+    - Vanara spirit tests you and teaches spirit sight. Maybe mentions the Vanara aren't supposed to be developing their spirit abilities but is obligated to train anyone who proves themselves. Maybe rival has already been there:
+        - Rival is leaving as you enter or
+        - Rival meets you as you are leaving and challenges you to a duel to test your abilities.
 
 Add ability to charge weapon
     Spin chakram around quickly in a circle twice (can move after throwing)
@@ -49,18 +84,14 @@ Add astral projection + telekinesis abilities
     -
     - if telekinesis you can pick up real objects if they have stable spirit elements (possibly limited by telekinesis level)
 
-Add example prologue area:
-    - Add text boxes
-        - Space/shift/enter to advance/dismiss
-        - On start
-        - "You're no ordinary monkey, what brings you here?"
-            "I heard there was a golden peach hidden in this cave that could make you immortal."
-        - On pickup item
-    - Floor switches to open exit from area that gives roll technique
-    - NPC that gives weapon?
-    - Peach of Immortality at the end
 
-Support 64x64 super tiles for world map. Or maybe just 48x48. Probably add this after Spirit World mechanics to make sure they perform okay together.
+Add upstairs/downstairs:
+    Same definition as door, but different graphics + animation
+        - targets are opposite stair types.
+        - log error if stairs without target are found
+            - Maybe log error if stairs don't connect to either a different zone or the correct floor in current zone
+        - Link back to themselves if no target is defined.
+
 
 Improve Tool Selection:
     - Track most recent input to control keyboard vs controller type
@@ -99,6 +130,7 @@ Some puzzle ideas:
     - Have a puzzle for the clone tool where a crystal deactivates after only 1s but cannot reach the door unless you stand at the door and have the clone hit the switch.
     - Similarly a puzzle where two switches must be hit within 1 second to make a chest appear. This could use the clone or an arrow.
     - A puzzle where 4 switches need to be hit in 200ms, you can blow up the clone in the middle to activate all at once.
+    - If we place a block on top of a switch that toggles on release, we can make a door that requires you to push the block off of the switch.
 
 Track the object an arrow is stuck in and move it with that target until it disappears
     - Use a different 'stuck' frame for the arrow missing the head.
@@ -122,6 +154,8 @@ Include some random dungeon design in the base game:
 Keep in mind significance of design elements for future racing/randomizer.
 
 Add quick tool select ring on the right analog stick.
+
+Support 64x64 super tiles for world map. Or maybe just 48x48. Probably add this after Spirit World mechanics to make sure they perform okay together.
 
 Possible tool: Leather gloves protect you from thorn bushes.
 Possible tool: Leather boots let you walk on thorny ground without taking damage.
